infra/k8s/services/appointment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment
  template:
    metadata:
      labels:
        app: appointment
    spec:
      containers:
        - name: appointment # this name is only important for logging purposes
          image: oopdaddy/appointment
          #          image: us.gcr.io/ticketing-dev-425001/appointment
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-srv
spec:
  selector:
    app: appointment
  ports:
    - name: appointment
      protocol: TCP
      port: 3000
      targetPort: 3000
