infra/k8s/services/dashbackend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashbackend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashbackend
  template:
    metadata:
      labels:
        app: dashbackend
    spec:
      containers:
        - name: dashbackend # this name is only important for logging purposes
          image: oopdaddy/dashbackend
          #          image: us.gcr.io/ticketing-dev-425001/dashbackend
---
apiVersion: v1
kind: Service
metadata:
  name: dashbackend-srv
spec:
  selector:
    app: dashbackend
  ports:
    - name: dashbackend
      protocol: TCP
      port: 3000
      targetPort: 3000
