infra/k8s/services/doctor-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor
  template:
    metadata:
      labels:
        app: doctor
    spec:
      containers:
        - name: doctor # this name is only important for logging purposes
          image: oopdaddy/doctor
          #          image: us.gcr.io/ticketing-dev-425001/doctor
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-srv
spec:
  selector:
    app: doctor
  ports:
    - name: doctor
      protocol: TCP
      port: 3000
      targetPort: 3000
