infra/k8s/services/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          command: ['redis-server']
          args: ['--maxmemory-policy', 'noeviction']
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data # This path should match the Redis data directory
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  selector:
    app: redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
