infra/k8s/services/whatsapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp
  template:
    metadata:
      labels:
        app: whatsapp
    spec:
      containers:
        - name: whatsapp # this name is only important for logging purposes
          image: oopdaddy/whatsapp
          #          image: us.gcr.io/ticketing-dev-425001/whatsapp
---
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-srv
spec:
  selector:
    app: whatsapp
  ports:
    - name: whatsapp
      protocol: TCP
      port: 3000
      targetPort: 3000
